--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -686,8 +686,13 @@
           },
           {
             "type": "Movement",
+            "mass": 1.5,
             "angularVelocity": [-500, 0, 0],
-            "linearVelocity": [0, 0, -5.0]
+            "linearVelocity": [0, 0, -5.0],
+            "linearAcceleration": [0, 0, -0.25],
+            "angularAcceleration": [-0.0625, 0, 0],
+            "maxLinearVelocityComponent": 80.0,
+            "maxAngularVelocityComponent": 600
           },
           {
             "type": "LightSpectrum",
@@ -728,8 +733,9 @@
           // },
           {
             "type": "Movement",
-            "angularVelocity": [0, 0, 0],
-            "linearVelocity": [0, 0, -5.0]
+            "linearVelocity": [0, 0, -5.0],
+            "linearAcceleration": [0, 0, -0.25],
+            "maxLinearVelocityComponent": 80.0
           }
         ]
       },
